# publication-scripts

./: .gitignore  LICENSE  README.md
2023/Lankacidin_C_to_Tubulin/: README.md
2025/IsiA_paper/pymembrane/pymembrane/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
2025/IsiA_paper/pymembrane/pymembrane/pymembrane/: __init__.py
2025/IsiA_paper/pymembrane/pymembrane/pymembrane/exciton/: exciton_aggregate.py  forster.py  hamiltonian.py  linear_spectra.py  lineshape.py  nonlinear_spectra.py  rate_matrix.py
2025/IsiA_paper/pymembrane/pymembrane/pymembrane/parameters/thylakoid/: __init__.py
2025/IsiA_paper/pymembrane/pymembrane/pymembrane/structure/: atomic_pigment.py  atomic_protein.py  cg_particle.py  electrostatics.py
2025/IsiA_paper/pymembrane/pymembrane/pymembrane/testing/: test_H_different_PDB_label.csv  test_H_same_PDB_label.csv  test_atomic_coupling.py  test_atomic_pigment.py  test_atomic_protein.py  test_cgparticle.py
2025/IsiA_paper/pymembrane/pymembrane/pymembrane/util/: calculate_exciton_distribution.py  colormap.py  coupling_data.py  extract_pdb_chains.py  fake_objects_for_testing.py  helper_functions.py  linear_algebra.py  load_hamiltonian.py  parameterize.py  pdb_structure_alignment_and_mapping.py  physical_constants.py  plot_cdc_contribution.py  procrustes.py  save_atomic_proteins_to_pdb.py  writeExtendedPDB.py
2025/IsiA_paper/pymembrane/pymembrane/pymembrane/util/mcce_neededFiles/: analysis_pKa_distribution.py  extract_conformers_step2out.py  psii_cofactor_charges_frank.py  rename_non_standard_2_standard.py
IsiA_paper/: README.md
(+484 files in other folders)
